{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 18,
  "lineage": "974d2b36-d922-15e1-3255-6b3bb4f08446",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1d4cc4d6bdbdfe6",
            "arn": "arn:aws:ec2:us-east-1:154061203144:elastic-ip/eipalloc-0d1d4cc4d6bdbdfe6",
            "associate_with_private_ip": "10.0.2.100",
            "domain": "vpc",
            "id": "eipalloc-0d1d4cc4d6bdbdfe6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-224-167-38.compute-1.amazonaws.com",
            "public_ip": "3.224.167.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "resume-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:154061203144:instance/i-02d8677d4e944b4e9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CICD",
            "id": "i-02d8677d4e944b4e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "demokey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09df99f3e1faf2149"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09df99f3e1faf2149",
            "private_dns": "ip-10-0-2-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.100",
            "public_ip": "3.224.167.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03ddda508d219d275",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003bf05ba7f03932c",
            "tags": {
              "Name": "master-server"
            },
            "tags_all": {
              "Name": "master-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05a6e538204c86102"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.niw-master",
            "aws_security_group.resume-sg",
            "aws_subnet.resume-subnet",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "resume-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:internet-gateway/igw-042c3b3995647d5d3",
            "id": "igw-042c3b3995647d5d3",
            "owner_id": "154061203144",
            "tags": {
              "Name": "resume-igw"
            },
            "tags_all": {
              "Name": "resume-igw"
            },
            "vpc_id": "vpc-007f6cf8628c0950d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "niw-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:network-interface/eni-09df99f3e1faf2149",
            "id": "eni-09df99f3e1faf2149",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:38:09:d9:e7:0b",
            "owner_id": "154061203144",
            "private_ip": "10.0.2.100",
            "private_ip_list": [
              "10.0.2.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05a6e538204c86102"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003bf05ba7f03932c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_subnet.resume-subnet",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "resume-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:route-table/rtb-020818199b198a905",
            "id": "rtb-020818199b198a905",
            "owner_id": "154061203144",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042c3b3995647d5d3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "resume-route"
            },
            "tags_all": {
              "Name": "resume-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-007f6cf8628c0950d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.resume-igw",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "resume-route_table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a82d5cf5bab311c",
            "route_table_id": "rtb-020818199b198a905",
            "subnet_id": "subnet-003bf05ba7f03932c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.resume-igw",
            "aws_route_table.resume-route",
            "aws_subnet.resume-subnet",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "resume-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group/sg-05a6e538204c86102",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a6e538204c86102",
            "ingress": [],
            "name": "allow tls",
            "name_prefix": "",
            "owner_id": "154061203144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "resume-sg"
            },
            "tags_all": {
              "Name": "resume-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-007f6cf8628c0950d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "resume-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:subnet/subnet-003bf05ba7f03932c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003bf05ba7f03932c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "154061203144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resume-subnet"
            },
            "tags_all": {
              "Name": "resume-subnet"
            },
            "vpc_id": "vpc-007f6cf8628c0950d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "resume-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:vpc/vpc-007f6cf8628c0950d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.2.0/24",
            "default_network_acl_id": "acl-0448c54d89fe01461",
            "default_route_table_id": "rtb-0534cce633423c010",
            "default_security_group_id": "sg-057bb4420b1461dca",
            "dhcp_options_id": "dopt-001e3584aea96fecd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007f6cf8628c0950d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0534cce633423c010",
            "owner_id": "154061203144",
            "tags": {
              "Name": "resume-vpc"
            },
            "tags_all": {
              "Name": "resume-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_2377",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-077d52364a948efda",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2377,
            "id": "sgr-077d52364a948efda",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a6e538204c86102",
            "security_group_rule_id": "sgr-077d52364a948efda",
            "tags": null,
            "tags_all": {},
            "to_port": 2377
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_4789_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-09227c7b1c578446b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 4789,
            "id": "sgr-09227c7b1c578446b",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a6e538204c86102",
            "security_group_rule_id": "sgr-09227c7b1c578446b",
            "tags": null,
            "tags_all": {},
            "to_port": 4789
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_7946_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0e81693fb30c64768",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 7946,
            "id": "sgr-0e81693fb30c64768",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a6e538204c86102",
            "security_group_rule_id": "sgr-0e81693fb30c64768",
            "tags": null,
            "tags_all": {},
            "to_port": 7946
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_7946_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0a94aa389c3ee8f1c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 7946,
            "id": "sgr-0a94aa389c3ee8f1c",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a6e538204c86102",
            "security_group_rule_id": "sgr-0a94aa389c3ee8f1c",
            "tags": null,
            "tags_all": {},
            "to_port": 7946
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0dac231cf2b22ba6d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0dac231cf2b22ba6d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a6e538204c86102",
            "security_group_rule_id": "sgr-0dac231cf2b22ba6d",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-076756a64c2de724f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-076756a64c2de724f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a6e538204c86102",
            "security_group_rule_id": "sgr-076756a64c2de724f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0419b47598e5fbc9b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0419b47598e5fbc9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a6e538204c86102",
            "security_group_rule_id": "sgr-0419b47598e5fbc9b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    }
  ]
}